# typst-wasm-build

./: .gitignore  Cargo.toml  README.MD  TODO  index.html  makefile  regenerate-vendor-manifest.js
.github/workflows/: deploy.yml
assets/: index-148c17be.js  index-f2c67f17.js  index-f80f1668.css
src/: lib.rs
tests/go/: go.mod  main.go
tests/node/: build-bridge.js  test-cetz.mjs  test.mjs
tests/vue/: App.vue  README.md  TypstChartTest.vue  TypstEditor.vue  TypstTest.vue  generate-manifest.js  generate-vendor-manifest.js  generate-vendor-manifest.mjs  index.html  package-lock.json  package.json  test-cetz.vue.mjs  test.vue.mjs  vite.config.js
tests/vue/public/: my_typst_wasm.js  vendor-manifest.json
