[package]
name = "my-typst-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
typst = "0.13.1" # Use the latest version
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
once_cell = "1.21.4"
typst-pdf = "0.13.1"

[profile.release]
opt-level = 'z'     # Optimize for size (use 's' for a balance)
lto = true          # Link Time Optimization (huge size saver)
codegen-units = 1   # Reduces parallelism to allow more optimization
panic = 'abort'     # Removes the heavy "unwinding" logic for panics
strip = true        # Strips symbols and debug info

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]